[package]
name = "limiter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
scylla = "0.5.0"
scylla-cql = "0.0.1"
redis = { version = "0.21.6", features = ["aio", "async-std-comp"] }
log = "0.4.8"
chrono = "0.4"
tokio = { version = "1.13", features = ["time", "rt-multi-thread"] }